specify node version

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest",
     "lint": "eslint \"src/**/*\""
   },
+  "engines": {
+    "node": "17.8.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
